--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -7,6 +7,9 @@
     <groupId>org.example</groupId>
     <artifactId>Server</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <mainClass>ransomaware.App</mainClass>
+    </properties>
     <build>
         <plugins>
             <plugin>
@@ -15,6 +18,21 @@
                 <configuration>
                     <source>10</source>
                     <target>10</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.6.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <mainClass>${mainClass}</mainClass>
                 </configuration>
             </plugin>
         </plugins>
