Fix server not responding and add initial keystore

--- a/.gitignore
+++ b/.gitignore
@@ -127,6 +127,9 @@ fabric.properties
 *.tar.gz
 *.rar
 
+# Target classes of maven
+target/
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
