Save files e tal

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 **/.idea/**/usage.statistics.xml
 **/.idea/**/dictionaries
 **/.idea/**/shelf
+**/.idea/sonarlint
 
 # Generated files
 **/.idea/**/contentModel.xml
@@ -132,6 +133,8 @@ target/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+Server/ransom-aware/files/
 
 # End of https://www.toptal.com/developers/gitignore/api/java,intellij
 
