Major refactoring (client commands)

--- a/.gitignore
+++ b/.gitignore
@@ -135,6 +135,7 @@ target/
 hs_err_pid*
 
 Server/ransom-aware/files/
+Client/workspace/
 
 # End of https://www.toptal.com/developers/gitignore/api/java,intellij
 
