--- a/.gitignore
+++ b/.gitignore
@@ -140,5 +140,8 @@ Client/workspace/
 # HTTP requests for testing
 *.http
 
+# Ignore .iml files
+*.iml
+
 # End of https://www.toptal.com/developers/gitignore/api/java,intellij
 
