--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -44,15 +44,23 @@
             <artifactId>picocli</artifactId>
             <version>4.5.2</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.mongodb/mongodb-driver -->
         <dependency>
             <groupId>org.mongodb</groupId>
-            <artifactId>mongo-java-driver</artifactId>
-            <version>2.12.3</version>
+            <artifactId>mongodb-driver</artifactId>
+            <version>3.12.7</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.8.6</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.github.fracpete/rsync4j -->
+        <dependency>
+            <groupId>com.github.fracpete</groupId>
+            <artifactId>rsync4j</artifactId>
+            <version>3.1.2-0</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains</groupId>
