--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -14,6 +14,7 @@
         <db.host>localhost</db.host>
         <db.port>27017</db.port>
         <db.name>ransom-aware</db.name>
+        <db.test>ransom-aware-test</db.test>
     </properties>
     <build>
         <testResources>
